<resources>
    <string name="app_name">Saka Fundi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--register and signin strings-->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="saka_fundi_sign_in">Saka Fundi Sign In</string>
    <string name="saka_fundi_sign_up">Saka Fundi Sign Up</string>

    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="verification_code">Verification COde</string>
    <string name="resend_verification_code">Resend Verification COde</string>
    <string name="get_verification_code">Get Verification COde</string>
    <string name="confirm_verification_code">Confirm Verification COde</string>
    <string name="other_names">Other Names</string>
    <string name="user_number">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="operation_locality">Operation Locality</string>
    <string name="agree_terms">Agree to the <u><b>terms and conditions</b></u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="have_an_account">Have an Account ?</string>
    <string name="sign_up_here"><u>Sign Up Here</u></string>
    <string name="sign_in_here"><u>Sign In Here</u></string>
    <string name="title_activity_landing_page">LandingPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="saka_fundi_artisans_tbl">saka_fundi_artisans</string>

    <string name="select_specialization">Select Specialization</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_anding">anding</string>
    <string name="title_activity_landing">Landing</string>
    <string-array name="specilization_list">
        <item>--  Select Specialization --</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Painter</item>
        <item>Mason</item>
    </string-array>
</resources>
