<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abedkiloo.abednego.dobismart.activities.SignIn">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_label_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/sp_12"
        android:layout_marginTop="@dimen/sp_24"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_48"
        android:textStyle="bold|italic" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/verification_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_label_app"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/sp_48"
            android:paddingRight="@dimen/sp_48"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_edit_text_confirm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/digit_drawable"
                android:drawableStart="@drawable/digit_drawable"
                android:hint="@string/verification_code" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_code_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/reg_user_details_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/person_drawable"
                    android:drawableStart="@drawable/person_drawable"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/person_drawable"
                    android:drawableStart="@drawable/person_drawable"
                    android:hint="@string/other_names" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_drawable"
                    android:drawableStart="@drawable/password_drawable"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/reg_specialization_spiiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48">

            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48"
                android:weightSum="1">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:padding="@dimen/sp_12"
                    android:text="@string/agree_terms" />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_user_details_linear"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/sp_48"
                android:paddingRight="@dimen/sp_48">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/reg_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/phone_number_drawable"
                    android:drawableStart="@drawable/phone_number_drawable"
                    android:hint="@string/phone_number" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_input"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/sp_48"
            android:layout_marginLeft="@dimen/sp_48"
            android:layout_marginRight="@dimen/sp_48"
            android:layout_marginStart="@dimen/sp_48"
            android:layout_marginTop="@dimen/sp_24"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_user_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/color_accent_custom_drawable"
                android:paddingLeft="@dimen/sp_24"
                android:paddingRight="@dimen/sp_24"
                android:text="@string/get_verification_code"
                android:textAllCaps="false"
                android:textColor="@color/color_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp_12"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/sp_12"
                android:paddingRight="@dimen/sp_12"
                android:textAlignment="center"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/have_an_account" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/text_view_sign_in_here"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:padding="@dimen/sp_12"
                    android:text="@string/sign_in_here"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</RelativeLayout>
